5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1601_820.log
== TEST (2019-03-25 01:48:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 22
    print(int(notas_R$50))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:49:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$"
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 23
    print(int(notas_R$10))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:50:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50 = valor//50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:51:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- OUTPUT:
temos 40 cedulas de 50 R$
temos 2 cedulas de 10 R$
temos 4 cedulas de 2 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 01:51:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- EXECUTION TIME:
0.13263
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
temos 40 cedulas de 50 R$
temos 2 cedulas de 10 R$
temos 4 cedulas de 2 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:52:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?: "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- OUTPUT:
temos 40 cedulas de 50 R$
temos 2 cedulas de 10 R$
temos 4 cedulas de 2 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:53:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?: "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- OUTPUT:
temos 40 cedulas de 50 R$
temos 2 cedulas de 10 R$
temos 4 cedulas de 2 R$
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 01:53:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?: "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- EXECUTION TIME:
0.147655
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
temos 40 cedulas de 50 R$
temos 2 cedulas de 10 R$
temos 4 cedulas de 2 R$
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:16:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?: "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print(notas50)
print(notas10)
print(notas2)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:16:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque?: "))

# Quantidade de notas de R$ 50
notas50 = valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print(notas50)
print(notas10)
print(notas2)

-- EXECUTION TIME:
0.168782
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
